Fixed cards size on mobile screen

--- a/next-app/src/components/Card/Card.module.scss
+++ b/next-app/src/components/Card/Card.module.scss
@@ -3,7 +3,7 @@
 .container {
   position: relative;
   width: 100%;
-  padding-bottom: 55%;
+  padding-bottom: 73%;
   border-radius: 24px;
   background-size: cover;
   background-repeat: no-repeat;
@@ -107,7 +107,11 @@
 }
 
 @media screen and (min-width: $tablet) {
-  .container.main {
-    gap: 24px;
+  .container {
+    padding-bottom: 55%;
+
+    &.main {
+      gap: 24px;
+    }
   }
 }
